<resources>
    <string name="app_name">XploraCodingChallenge</string>
    <string name="lbl_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="lbl_forgot_my_password">Forgot my password</string>
    <string name="lbl_done">DONE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="module_list">Module List</string>
</resources>